# A1_Maze_Python

./: .gitignore  README.md  README_RUS.md
src/: Makefile  README.md  algorithm.py  load.py  main.py  maze.py  maze.pyproject  pyproject.toml  view.py
src/files/: 2.txt  4.txt
src/modules/: algorithm.py  exception.py  generation.py  load.py  maze.py  ui.py
src/tests/: conftest.py  test_find_path.py
src/ui/: form.ui  form.ui.autosave  form_ui.py  maze.py
