[tool.poetry]
package-mode = false
name = "Maze"
version = "0.1.0"
description = ""
authors = ["klotzgal <ggg44466635@gmail.com>", "pickling <>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pytest = "^8.2.2"
pyside6 = "^6.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"
isort = "^5.13.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"ui/*ui*.py" = ["F"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest]
pythonpath = "src"
python_files = "test_*.py"
testpaths = ["src/tests"]
log_cli = true
log_cli_level = "INFO"